--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -50,17 +50,13 @@
         <br>
         <br>
         <hr>
-        <!-- <div class="my-4">
-            <span><b>Sale:</b> 1000</span>
-            <span class="mx-5"><b>Total Orders:</b> 50</span>
-            <span class="mx-5"><b>Canceled Orders:</b> 3</span>
+        <div class="my-4">
+            <span><b>Total Sale:</b> <%= totalAmount %></span>
+            <span class="mx-5"><b>Delivered Orders:</b> <%= orders %></span>
+            <span class="mx-5"><b>Canceled Orders:</b> <%= canceled %></span>
             
-        </div> -->
+        </div>
         <canvas id="myChart" class="w-100" height="350px"></canvas>
-        <!-- <div class="my-5" style="height: 20px;">
-            <span class="float-end"><b>Total Sale :</b> 10000</span>
-        </div> -->
-        
     </div>
 </div>
 
