--- a/views/admin/food/edit.ejs
+++ b/views/admin/food/edit.ejs
@@ -52,7 +52,6 @@
                       <input type="hidden" name="foodId" id="foodId" value="<%= food._id %>"> 
                       <input type="hidden" name="prevImage" id="prevImage" value="<%= food.image %>"> 
                       <input type="hidden" name="prevSlug" id="prevSlug" value="<%= food.slug %>"> 
-                      <input type="hidden" class="form-control border-dark" name="foodName" placeholder="Food Name" value="<%= food.slug %>" readonly>
                       <div class="row">
                         <div class="col-md-12">
                             <label class="cabinet center-block">
@@ -87,14 +86,14 @@
                     </div>
                     <div class="col-xl-8 text-dark">
                       <div class="form-floating mb-3 mt-5">
-                        <input type="text" class="form-control border-dark" name="foodupdateName" id="foodName" placeholder="Food Name" value="<%= food.foodName %>">
+                        <input type="text" class="form-control border-dark" name="foodName" id="foodName" placeholder="Food Name" value="<%= food.foodName %>">
                         <label for="foodName" id="foodNameLabel">Food Name*</label>
                       </div>
                     
                     
                       <div class="form-floating mb-3">
-                        <input type="number" min="1" max="50" class="form-control border-dark" name="qtyLimit" value="<%= food.foodLimit %>" id="qtyLimit" placeholder="Quantity Limit">
-                        <label for="qtyLimit" id="qtyLimitLabel">Food Quantity Limit*</label>
+                        <input type="number" min="1" max="200" class="form-control border-dark" name="totalStoke" value="<%= food.totalStoke %>" id="totalStoke" placeholder="Total Stoke">
+                        <label for="Total Stoke" id="totalStokeLabel">Total Stoke* (Maximum 200)</label>
                       </div>
                       <div class="form-floating mb-3">
                         <input type="text" class="form-control border-dark" name="orgPrice" id="orgPrice" placeholder="Original Price" value="<%= food.orgPrice %>">
